# 2026-7-VEXVRC-Code-Hyper

./: README.md  compile_commands.json  project.pros
ProsToggleUploader/: CMakeLists.txt  README.md
ProsToggleUploader/examples/pros_project/: main.cpp
ProsToggleUploader/scripts/: build-macos.sh  build-windows.ps1
ProsToggleUploader/src/: MainWindow.cpp  MainWindow.hpp  main.cpp
examples/: dbgLayout.json
include/: main.h  options.h
programming/HyperBotUploader/: CMakeLists.txt
programming/HyperBotUploader/include/: FieldScene.h  FieldView.h  FieldWindow.h  MainWindow.h  ProjectManager.h  RobotItem.h  UsbManager.h
programming/HyperBotUploader/src/: FieldScene.cpp  FieldView.cpp  FieldWindow.cpp  MainWindow.cpp  MainWindow.ui  ProjectManager.cpp  RobotItem.cpp  UsbManager.cpp  main.cpp
src/: main.cpp
